Attempting to fix overflow on toc element

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -43,8 +43,9 @@ html, body {
 
 #toc {
   height: 100%;
-  overflow: scroll;
-  overflow-y: hidden;
+  overflow: auto;
+  position: relative;
+  z-index: 12;
 }
 
 #toc > ul > li > a > span {
